--- a/client/src/Pages/Footer/Footer.css
+++ b/client/src/Pages/Footer/Footer.css
@@ -65,6 +65,13 @@
   font-weight: 600;
 }
 
+@media (max-width: 768px){
+  .footer-top {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
 @media (max-width: 500px){
   .footer_link_main {
     justify-content: space-between;
